--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".view.MainActivity">
-
-    <EditText
-        android:id="@+id/edtUserName"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/hint_enter_user_name" />
-
-    <EditText
-        android:id="@+id/edtPassword"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/hint_enter_password"
-        android:inputType="textPassword" />
-
-    <Button
-        android:id="@+id/btnLogin"
-        android:textAllCaps="false"
-        android:text="@string/text_btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
+    tools:context=".screen.main.MainActivity">
 
 </LinearLayout>
